# Proyecto-Final-Drones

./: .gitignore  CMakeLists.txt  CentroLogistico.cpp  CentroLogistico.hpp  Drone.cpp  Drone.hpp  Excepciones.hpp  GestorFicheros.cpp  GestorFicheros.hpp  GestorRutas.cpp  GestorRutas.hpp  Paquete.cpp  Paquete.hpp  SIGFD.sln  SIGFD.vcxproj  compilar.bat  informe_envios.txt  main.cpp
SIGFD/x64/Debug/: SIGFD.exe.recipe  SIGFD.ilk  vc145.idb
SIGFD/x64/Debug/SIGFD.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  SIGFD.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
SistemaDrones/: Drone.cpp  Drone.hpp  Paquete.cpp  SistemaDrones.slnx  SistemaDrones.vcxproj  SistemaDrones.vcxproj.filters  main.cpp
x64/Debug/: flota.txt
